# clawesome

./: .gitignore  README.md  clawesome-ascii-art-medium.txt  clawesome.json  moon.yml  package.json
.agent/workflows/: dev.md  install.md
.moon/: toolchains.yml  workspace.yml
apps/api/: drizzle.config.ts  moon.yml  nest-cli.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/api-go/: moon.yml
apps/api/src/: app.module.ts  main.ts
apps/api/src/db/: db.module.ts  db.seed.ts  schema.ts
apps/api/test/postman/: collection.json  (+1 more)
apps/cli/: moon.yml  package.json  tsconfig.json
apps/cli/src/: index.ts
apps/dashboard/: README.md  moon.yml  next.config.ts  package.json  tsconfig.json
apps/dashboard/.storybook/: preview.tsx
apps/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
apps/docs/: moon.yml  next.config.ts  package.json  tsconfig.json
apps/docs/.storybook/: preview.tsx
apps/docs/app/: globals.css  layout.tsx  page.stories.tsx  page.tsx
apps/docs/components/: DocPlaceholder.tsx  DocsLayout.tsx  LeftSidebar.tsx  TopBar.tsx
apps/gateway/: moon.yml  package.json
apps/gateway/src/: index.ts  server.ts
apps/website/: moon.yml  package.json  tsconfig.json
apps/website/.storybook/: preview.tsx
apps/website/app/: globals.css  layout.tsx  page.stories.tsx  page.tsx
apps/website/components/: Donate.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Testimonials.tsx
apps/website/stories/: Button.tsx
docs/: 005_dashboard_performance.md
docs/tasks/: 004_clawesome_desktop_bundle.md
scripts/: forge-bundle.sh  install-splash.ts
(+153 files in other folders)
