[package]
name = "clawesome"
version = "0.1.0"
description = "Clawesome OS Desktop"
authors = ["Clawesome Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds
custom-protocol = ["tauri/custom-protocol"]
